Fixes #6138 Links in admin pages are now underlined to be visible

--- a/plugins/CoreAdminHome/stylesheets/generalSettings.less
+++ b/plugins/CoreAdminHome/stylesheets/generalSettings.less
@@ -4,6 +4,7 @@
 
 .admin a {
     color: black;
+    text-decoration: underline;
 }
 
 #content.admin {
